# GeoGram_sufix-ice

./: .gitignore  CLAUDE.md  MasterOutline.md  README.md  pyproject.toml  requirements.txt
notebooks/: 01-project-setup.ipynb  02-filter-ice.ipynb  03-ujc-analysis.ipynb  04-data-integration.ipynb  05-grammar-classification-ujc.ipynb  06-grammar-classification-wiki.ipynb  07-analysis.ipynb  08-spatial-segregation.ipynb  09-unknown-vs-population.ipynb  10-unknown-spatial-connection.ipynb  11-suffix-morphology.ipynb  12-exceptions-and-synthesis.ipynb
src/geogram/: __init__.py  __main__.py  config.py  data.py  ingest.py  morphology.py  ujc.py  viz.py  wikipedia.py
